added metadata endpoints
